# Gemini-API

./: CHANGELOG.md  REPORT.md  pyproject.toml
src/gemini_webapi/utils/: __init__.py  model_discovery.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  otaq7b_response.json
tests/unit/: __init__.py  test_model_discovery.py
