[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-webapi"
authors = [
    {name = "UZQueen"},
]
description = "✨ An elegant async Python wrapper for Google Gemini web app"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["API", "async", "Gemini", "Bard", "Google", "Generative AI", "LLM"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "curl-cffi~=0.15.0",
    "loguru~=0.7.3",
    "orjson~=3.11.7",
    "pydantic~=2.12.5",
]
dynamic = ["version"]

[project.optional-dependencies]
browser = ["browser-cookie3"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "black>=24.10",
    "pyright>=1.1.380",
]

[project.urls]
Repository = "https://github.com/ahmedyousefusagemini-cpu/Gemini-API"
Issues = "https://github.com/ahmedyousefusagemini-cpu/Gemini-API/issues"
Upstream = "https://github.com/HanaokaYuzu/Gemini-API"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gemini_webapi*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
target-version = "py311"
# Scope strict lint to new code. Each entry below is upstream-inherited and
# will be re-enabled in a dedicated cleanup PR (see REPORT.md).
extend-exclude = [
    "build",
    "dist",
    ".venv",
    # Upstream-inherited Python sources (pre-existing lint debt).
    "src/gemini_webapi/client.py",
    "src/gemini_webapi/components/chat_mixin.py",
    "src/gemini_webapi/components/gem_mixin.py",
    "src/gemini_webapi/components/research_mixin.py",
    "src/gemini_webapi/types/availablemodel.py",
    "src/gemini_webapi/types/candidate.py",
    "src/gemini_webapi/types/chathistory.py",
    "src/gemini_webapi/types/modeloutput.py",
    "src/gemini_webapi/utils/decorators.py",
    "src/gemini_webapi/utils/get_access_token.py",
    "src/gemini_webapi/utils/logger.py",
    "src/gemini_webapi/utils/rotate_1psidts.py",
    "src/gemini_webapi/utils/upload_file.py",
    # Upstream live-only integration tests (the new offline suite lives in tests/unit/).
    "tests/test_cli.py",
    "tests/test_client_features.py",
    "tests/test_deep_research.py",
    "tests/test_gem_mixin.py",
    "tests/test_save_image.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",
    "B008",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
extend-exclude = '''
(
    # Upstream-inherited; will be reformatted in a dedicated cleanup PR.
    ^/src/gemini_webapi/client\.py
  | ^/src/gemini_webapi/components/.*\.py
  | ^/src/gemini_webapi/types/availablemodel\.py
  | ^/src/gemini_webapi/types/candidate\.py
  | ^/src/gemini_webapi/types/chathistory\.py
  | ^/src/gemini_webapi/types/modeloutput\.py
  | ^/src/gemini_webapi/utils/decorators\.py
  | ^/src/gemini_webapi/utils/get_access_token\.py
  | ^/src/gemini_webapi/utils/logger\.py
  | ^/src/gemini_webapi/utils/rotate_1psidts\.py
  | ^/src/gemini_webapi/utils/upload_file\.py
  | ^/tests/test_cli\.py
  | ^/tests/test_client_features\.py
  | ^/tests/test_deep_research\.py
  | ^/tests/test_gem_mixin\.py
  | ^/tests/test_save_image\.py
)
'''

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "build", "dist", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateImportUsage = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that require live Gemini credentials and network access (deselect with -m 'not live')",
]
